<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".authActivities.LoginActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_above="@+id/login_email"
        android:text="@string/login"
        style="@style/PageTitle"
        android:layout_marginBottom="40dp"/>

    <EditText
        android:id="@+id/login_email"
        style="@style/InputEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/login_password"
        android:autofillHints="email"
        android:layout_marginBottom="20dp"
        android:drawableStart="@drawable/ic_baseline_email_24"
        android:drawablePadding="10dp"
        android:elevation="6dp"
        android:hint="@string/email_address"
        android:inputType="textEmailAddress"/>

    <EditText
        android:id="@+id/login_password"
        style="@style/InputEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:autofillHints="password"
        android:drawableStart="@drawable/ic_baseline_lock_24"
        android:drawablePadding="10dp"
        android:elevation="6dp"
        android:hint="@string/password"
        android:inputType="textPassword"/>

    <Button
        android:id="@+id/login_button"
        style="@style/Button_Tab"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sign_in"
        android:layout_below="@+id/login_password"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:padding="10dp"
        android:textAllCaps="false"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"/>

    <TextView
        android:id="@+id/login_forgot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login_button"
        android:text="@string/forgot_password"
        style="@style/Paragraph_Secondary_Caption"
        android:layout_marginTop="30dp"
        android:layout_marginStart="20dp"/>

    <TextView
        android:id="@+id/login_help"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login_button"
        android:text="@string/help"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="20dp"
        style="@style/Paragraph_Secondary_Caption"
        android:layout_marginTop="30dp"
        android:layout_marginStart="20dp"/>

    <TextView
        android:id="@+id/login_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/i_don_t_have_an_account_register"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="15dp"
        style="@style/Paragraph_Secondary_Caption"/>

    <TextView
        android:id="@+id/login_notification"
        style="@style/notification"/>





</RelativeLayout>