<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.auth.ForgotActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:layout_marginBottom="90dp"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:layout_above="@+id/forgot_email"
        style="@style/PageTitle"
        android:text="@string/please_enter_your_email_in_order_to_reset_your_password"
        android:layout_centerHorizontal="true"/>

    <EditText
        android:id="@+id/forgot_email"
        style="@style/InputEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="username"
        android:layout_centerVertical="true"
        android:drawableStart="@drawable/ic_baseline_account_circle_24"
        android:drawablePadding="10dp"
        android:elevation="6dp"
        android:hint="@string/your_username"
        android:inputType="textEmailAddress"/>

    <Button
        android:id="@+id/forgot_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/forgot_email"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="20dp"
        android:textAllCaps="false"
        android:padding="10dp"
        android:layout_marginStart="20dp"
        android:text="@string/reset_my_password"/>

</RelativeLayout>